🔨 implements viewModel + di

--- a/base-module.gradle
+++ b/base-module.gradle
@@ -56,3 +56,7 @@ dependencies {
     androidTestImplementation Testing.mockWebServer
     androidTestImplementation Testing.hiltTesting
 }
+
+kapt {
+    correctErrorTypes = true
+}
