--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -72,3 +72,7 @@ dependencies {
     androidTestImplementation Testing.mockWebServer
     androidTestImplementation Testing.hiltTesting
 }
+
+kapt {
+    correctErrorTypes = true
+}
