--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation Compose.uiToolingPreview
     implementation Compose.hiltNavigationCompose
     implementation Compose.material
+    implementation Compose.icons
     implementation Compose.runtime
     implementation Compose.navigation
     implementation Compose.viewModelCompose
