✅ its created tests

--- a/base-module.gradle
+++ b/base-module.gradle
@@ -47,6 +47,8 @@ dependencies {
     testImplementation Testing.coroutines
     testImplementation Testing.composeUiTest
     testImplementation Testing.mockk
+    testImplementation Testing.mockito
+    testImplementation Testing.mockitoKotlin
     testImplementation Testing.mockWebServer
 
     androidTestImplementation Testing.junit4
